# biosim-client

./: 404.html  CONTRIBUTING.md  Dockerfile  README.md  example.ipynb  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: main.yml  on-release-main.yml
.openapi-generator/: FILES
biosim_client/: biosimclient.py  client.py  dataset.py  example.py  sim_data.py  sim_results.py  simdataclient.py  try_easy.py
biosim_client/api/: biosim_README.md
biosim_client/api/api_specs/: biosim.yaml
biosim_client/api/biosim/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
biosim_client/api_clients/simdata/: README.md  pyproject.toml  setup.py
biosim_client/api_specs/: simdata.json
biosim_client/simdata_api/: __init__.py  api_client.py  configuration.py  rest.py
biosim_client/simdata_api/api/: __init__.py  default_api.py
biosim_client/simdata_api/docs/: DatasetData.md  DefaultApi.md  HDF5Attribute.md  HDF5Dataset.md  HDF5File.md  HDF5Group.md  HTTPValidationError.md  StatusResponse.md  ValidationError.md  ValidationErrorLocInner.md  Value.md
biosim_client/simdata_api/models/: __init__.py  dataset_data.py  hdf5_attribute.py  hdf5_dataset.py  hdf5_file.py  hdf5_group.py  http_validation_error.py  status_response.py  validation_error.py  value.py
biosim_client/simdata_api/test/: test_dataset_data.py  test_default_api.py  test_hdf5_attribute.py  test_hdf5_dataset.py  test_hdf5_file.py  test_hdf5_group.py  test_http_validation_error.py  test_status.py  test_status_response.py  test_validation_error.py  test_validation_error_loc_inner.py  test_value.py
biosim_client/verify/: biosim_client.py  models.py
docs/: index.md  modules.md
modules/: index.html
notebooks/: verify-demo.ipynb
scripts/: generate_clients.sh  run_notebook.sh
search/: search_index.json
tests/: conftest.py  test_biosimclient.py  test_foo.py  test_notebook.py  test_reports.py  test_simdataclient.py
tests/fixtures/: biosim_fixtures.py
tests/fixtures/data/: OmexVerifyWorkflowOutput_expected.json  RunsVerifyWorkflowOutput_2_expected.json  (+3 more)
(+69 files in other folders)
