[tool.poetry]
name = "biosim_client"
version = "0.0.1"
description = "This is a library to access biosimulations.org APIs."
authors = ["Jim Schaff <schaff@uchc.edu>"]
repository = "https://github.com/jcschaff/biosim-client"
documentation = "https://jcschaff.github.io/biosim-client/"
readme = "README.md"
packages = [
  {include = "biosim_client"}
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pydantic = "^2.9.2"
numpy = "^2.1.3"
pandas = "^2.2.3"
jupyter = "^1.1.1"
matplotlib = "^3.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
deptry = "^0.16.2"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"
types-python-dateutil = "^2.9.0.20241003"
pandas-stubs = "^2.2.3.241009"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = {extras = ["python"], version = "^0.26.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["biosim_client"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"



[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["biosim_client"]


[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
